tests/sksl/errors/UndefinedSymbol.dsl.glsl
### Compilation failed:

error: unknown identifier 'x'

error: cannot assign to this expression

2 errors
